# Toolbox-Cli

./: .gitignore  AGENTSSUMMARY.md  Cargo.toml  LICENSE  README.md  build.rs  todo.md
.cargo/: config.toml
docs/: bntx-explore.ps1  bntx-explore2.ps1  bntx-explore3.ps1  bntx-str-walk.ps1  msg-bntx-rt.txt
src/: audit.rs  bflan.rs  dds.rs  diff.rs  error.rs  layout.rs  lib.rs  main.rs  manifest.rs  sarc.rs  texpipe.rs
src/bflyt/: mod.rs  ops.rs  read.rs  sections.rs  write.rs
src/bntx/: decode.rs  dict_builder.rs  error.rs  mod.rs  pipeline.rs  read.rs  write.rs
src/verbs/: bflan_inspect.rs  bflan_roundtrip_test.rs  bflyt_add_material.rs  bflyt_add_texture_ref.rs  bflyt_helpers.rs  bflyt_inspect.rs  bflyt_mat1_diff.rs  bflyt_roundtrip_test.rs  bflyt_section_diff.rs  bntx_dict_test.rs  bntx_export_all.rs  bntx_export_dds.rs  bntx_export_png.rs  bntx_import_dds.rs  bntx_import_png.rs  bntx_inspect.rs  bntx_layout_dump.rs  bntx_remove_texture.rs  bntx_replace_dds.rs  bntx_replace_png.rs  bntx_rlt_dump.rs  bntx_roundtrip_test.rs  layout_apply_arc.rs  layout_apply_manifest.rs  layout_audit.rs  layout_diff.rs  layout_validate_manifest.rs  mat_rename.rs  mod.rs  pane_clone.rs  pane_set.rs  sarc_pack.rs  sarc_unpack.rs
tests/: bflan_roundtrip.rs  bflyt_flags_untrusted.rs  bflyt_prt1_wnd1_round_trip.rs  bflyt_real_fixtures.rs  bflyt_synthesis.rs  bntx_cube_mip_decode.rs  bntx_dds_roundtrip.rs  bntx_dict_edge.rs  bntx_dict_parallel_order.rs  bntx_dict_stress.rs  bntx_export_png.rs  bntx_real_fixtures.rs  bntx_remove_texture.rs  bntx_replace_format_preserving.rs  bntx_replace_in_place.rs  bntx_rlt_large.rs  layout_apply_arc.rs  layout_audit.rs  layout_diff.rs  sarc_writer.rs  texpipe_cube_and_mip.rs  texpipe_round_trip.rs
